[metadata]
name = scatterbackup
version = 0.1.0
description = "File and directory manipulation tools for Python"
long_description = file: README.md
license = GPLv3+
author = "Ingo Ruhnke"
author_email = "grumbel@gmail.com"
url = http://github.com/grumbel/scatterbackup

[options]
packages = find:
include_package_data = True
install_requires =
  PyYAML
  pyxdg
  pyparsing

[options.entry_points]
console_scripts =
  sb-maketree = scatterbackup.cmd_maketree:main
  sb-diff = scatterbackup.cmd_diff:main
  sb-diffdb = scatterbackup.cmd_diffdb:main
  sb-inbackup = scatterbackup.cmd_inbackup:main
  sb-ncdu = scatterbackup.cmd_ncdu:main
  sb-dbtool = scatterbackup.cmd_dbtool:main
  sb-md5sum = scatterbackup.cmd_md5sum:main
  sb-dupfinder = scatterbackup.cmd_dupfinder:main
  sb-dupfinderdb = scatterbackup.cmd_dupfinderdb:main
  sb-query = scatterbackup.cmd_query:main
  sb-update = scatterbackup.cmd_update:main
  sb-fsck = scatterbackup.cmd_fsck:main
  sb-info = scatterbackup.cmd_info:main
  sb-log = scatterbackup.cmd_log:main
  sb-du = scatterbackup.cmd_du:main
  sb-sha1sum = scatterbackup.cmd_sha1sum:main

[flake8]
max-line-length = 120

[mypy]
strict = True
check_untyped_defs = True
disallow_untyped_defs = True
warn_return_any = True
warn_unreachable = True
warn_unused_configs = True
ignore_missing_imports = True

# must be False, see https://github.com/python/mypy/issues/10757
disallow_untyped_calls = False

# triggered by QObject
disallow_subclassing_any = False

# Can't use this due to mypy/pyright having different ideas about cast()
warn_redundant_casts = False

[mypy-torch.*]
disallow_untyped_calls = False

[mypy-dirtoo.*]
ignore_missing_imports = False

[mypy-tests.*]
ignore_missing_imports = False

[pylint]
extension-pkg-whitelist = PyQt5
disable =
  broad-except,
  consider-using-f-string,
  consider-using-in,
  duplicate-code,
  fixme,
  import-outside-toplevel,
  invalid-name,
  logging-format-interpolation,
  logging-fstring-interpolation,
  missing-class-docstring,
  missing-function-docstring,
  missing-module-docstring,
  no-else-return,
  no-self-use,
  protected-access,
  superfluous-parens,
  too-few-public-methods,
  too-many-arguments,
  too-many-branches,
  too-many-instance-attributes,
  too-many-locals,
  too-many-public-methods,
  too-many-return-statements,
  too-many-statements,
  unnecessary-lambda,
  unspecified-encoding,
  unused-argument,
  unused-variable,
  using-constant-test,
  too-many-nested-blocks,
  use-implicit-booleaness-not-comparison,
  consider-using-from-import,
  useless-super-delegation,
  consider-iterating-dictionary,

[pylint.FORMAT]
max-line-length = 120

# EOF #
